16940
The pattern parser halts when it sees stars.  This means it does not handle infix notation for a case class named "*".  (This is an edgy use case.)

Also, the error reporting around syntax errors could be improved, both to provide helpful hints and for recovery, to report subsequent errors.

This is related to SI-3189, which no longer crashes, but doesn't yet report nicely.

{code}
object Test {
  case class *(a: Int, b: Int)
  type Star = *
  case class P(a: Int, b: Star) // alias still required

  def main(args: Array[String]) {
    val v = new *(6,7)
    val x * y = v   // OK, where sequence pattern not allowed
    printf("%d,%d\n",x,y)
    val p = P(5, v)
    val P(a, b * c) = p  // error
    printf("%d,%d,%d\n",a,b,c)
  }
}
{code}

Sample improved message:
{code}
t3189.scala:2: error: use _* to match a sequence
  val Array(a,b*) = ("": Any)
                ^
one error found
{code}

A patch is forthcoming.
